--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -733,76 +733,76 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 2.597596\n",
-      "Minibatch accuracy: 14.8%\n",
-      "Validation accuracy: 30.0%\n",
-      "Minibatch loss at step 500: 0.548513\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 83.7%\n",
-      "Minibatch loss at step 1000: 0.543522\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 84.3%\n",
-      "Minibatch loss at step 1500: 0.440411\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 85.8%\n",
-      "Minibatch loss at step 2000: 0.424176\n",
-      "Minibatch accuracy: 89.8%\n",
-      "Validation accuracy: 86.7%\n",
-      "Minibatch loss at step 2500: 0.397506\n",
-      "Minibatch accuracy: 86.7%\n",
+      "Minibatch loss at step 0: 2.742471\n",
+      "Minibatch accuracy: 9.0%\n",
+      "Validation accuracy: 20.9%\n",
+      "Minibatch loss at step 500: 0.673741\n",
+      "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 84.2%\n",
+      "Minibatch loss at step 1000: 0.441843\n",
+      "Minibatch accuracy: 87.1%\n",
+      "Validation accuracy: 86.2%\n",
+      "Minibatch loss at step 1500: 0.563649\n",
+      "Minibatch accuracy: 86.3%\n",
       "Validation accuracy: 87.1%\n",
-      "Minibatch loss at step 3000: 0.511016\n",
-      "Minibatch accuracy: 84.4%\n",
+      "Minibatch loss at step 2000: 0.399807\n",
+      "Minibatch accuracy: 85.9%\n",
       "Validation accuracy: 87.3%\n",
-      "Minibatch loss at step 3500: 0.474231\n",
-      "Minibatch accuracy: 84.4%\n",
+      "Minibatch loss at step 2500: 0.494128\n",
+      "Minibatch accuracy: 84.0%\n",
       "Validation accuracy: 87.8%\n",
-      "Minibatch loss at step 4000: 0.380416\n",
+      "Minibatch loss at step 3000: 0.475884\n",
       "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 87.9%\n",
-      "Minibatch loss at step 4500: 0.440390\n",
-      "Minibatch accuracy: 88.3%\n",
-      "Validation accuracy: 88.0%\n",
-      "Minibatch loss at step 5000: 0.416496\n",
-      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 88.1%\n",
+      "Minibatch loss at step 3500: 0.427772\n",
+      "Minibatch accuracy: 87.1%\n",
       "Validation accuracy: 88.2%\n",
-      "Minibatch loss at step 5500: 0.481230\n",
-      "Minibatch accuracy: 83.6%\n",
+      "Minibatch loss at step 4000: 0.372438\n",
+      "Minibatch accuracy: 87.1%\n",
       "Validation accuracy: 88.4%\n",
-      "Minibatch loss at step 6000: 0.522546\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 88.5%\n",
-      "Minibatch loss at step 6500: 0.345110\n",
-      "Minibatch accuracy: 91.4%\n",
-      "Validation accuracy: 88.5%\n",
-      "Minibatch loss at step 7000: 0.441250\n",
-      "Minibatch accuracy: 84.4%\n",
+      "Minibatch loss at step 4500: 0.396979\n",
+      "Minibatch accuracy: 88.7%\n",
       "Validation accuracy: 88.6%\n",
-      "Minibatch loss at step 7500: 0.529304\n",
-      "Minibatch accuracy: 84.4%\n",
-      "Validation accuracy: 88.6%\n",
-      "Minibatch loss at step 8000: 0.580567\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 88.7%\n",
-      "Minibatch loss at step 8500: 0.354832\n",
-      "Minibatch accuracy: 89.8%\n",
-      "Validation accuracy: 88.7%\n",
-      "Minibatch loss at step 9000: 0.420780\n",
+      "Minibatch loss at step 5000: 0.444498\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 88.8%\n",
+      "Minibatch loss at step 5500: 0.415580\n",
       "Minibatch accuracy: 88.3%\n",
-      "Validation accuracy: 88.8%\n",
-      "Minibatch loss at step 9500: 0.446381\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 88.8%\n",
-      "Test accuracy: 94.8%\n"
+      "Validation accuracy: 88.7%\n",
+      "Minibatch loss at step 6000: 0.448655\n",
+      "Minibatch accuracy: 87.9%\n",
+      "Validation accuracy: 88.7%\n",
+      "Minibatch loss at step 6500: 0.396504\n",
+      "Minibatch accuracy: 88.7%\n",
+      "Validation accuracy: 88.9%\n",
+      "Minibatch loss at step 7000: 0.286706\n",
+      "Minibatch accuracy: 91.4%\n",
+      "Validation accuracy: 88.9%\n",
+      "Minibatch loss at step 7500: 0.332397\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 88.9%\n",
+      "Minibatch loss at step 8000: 0.401409\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Validation accuracy: 89.0%\n",
+      "Minibatch loss at step 8500: 0.299521\n",
+      "Minibatch accuracy: 90.2%\n",
+      "Validation accuracy: 89.1%\n",
+      "Minibatch loss at step 9000: 0.361511\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 89.2%\n",
+      "Minibatch loss at step 9500: 0.262223\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation accuracy: 89.1%\n",
+      "Test accuracy: 94.9%\n"
      ]
     }
    ],
    "source": [
     "# Number of hidden nodes\n",
     "num_hidden_nodes = 1024\n",
-    "num_hidden_nodes_2 = 512\n",
+    "num_hidden_nodes_2 = 256\n",
     "num_hidden_nodes_3 = 128\n",
-    "batch_size = 128\n",
+    "batch_size = 256\n",
     "num_steps = 10000\n",
     "\n",
     "# Our dropout probabibility to keep units, meaning we'll shoot randomly 25% of our units\n",
@@ -907,6 +907,13 @@
     "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
     "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reached 94.9% accuracy, not bad!"
    ]
   },
   {
