--- a/courses/udacity/3_regularization.ipynb
+++ b/courses/udacity/3_regularization.ipynb
@@ -28,7 +28,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -67,11 +67,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 1
+       "item_id": 1.0
       }
      ]
     },
@@ -80,9 +80,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 11777,
+     "elapsed": 11777.0,
      "status": "ok",
-     "timestamp": 1449849322348,
+     "timestamp": 1.449849322348E12,
      "user": {
       "color": "",
       "displayName": "",
@@ -93,7 +93,7 @@
       "sessionId": "0",
       "userId": ""
      },
-     "user_tz": 480
+     "user_tz": 480.0
     },
     "id": "y3-cj1bpmuxc",
     "outputId": "e03576f1-ebbe-4838-c388-f1777bcc9873"
@@ -148,11 +148,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 1
+       "item_id": 1.0
       }
      ]
     },
@@ -161,9 +161,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 11728,
+     "elapsed": 11728.0,
      "status": "ok",
-     "timestamp": 1449849322356,
+     "timestamp": 1.449849322356E12,
      "user": {
       "color": "",
       "displayName": "",
@@ -174,7 +174,7 @@
       "sessionId": "0",
       "userId": ""
      },
-     "user_tz": 480
+     "user_tz": 480.0
     },
     "id": "IRSyYiIIGIzS",
     "outputId": "3f8996ee-3574-4f44-c953-5c8a04636582"
@@ -215,7 +215,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -923,7 +923,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -942,7 +944,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
