--- a/courses/udacity/4_convolutions.ipynb
+++ b/courses/udacity/4_convolutions.ipynb
@@ -28,7 +28,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -56,11 +56,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 1
+       "item_id": 1.0
       }
      ]
     },
@@ -69,9 +69,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 11948,
+     "elapsed": 11948.0,
      "status": "ok",
-     "timestamp": 1446658914837,
+     "timestamp": 1.446658914837E12,
      "user": {
       "color": "",
       "displayName": "",
@@ -82,7 +82,7 @@
       "sessionId": "0",
       "userId": ""
      },
-     "user_tz": 480
+     "user_tz": 480.0
     },
     "id": "y3-cj1bpmuxc",
     "outputId": "016b1a51-0290-4b08-efdb-8c95ffc3cd01"
@@ -137,11 +137,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 1
+       "item_id": 1.0
       }
      ]
     },
@@ -150,9 +150,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 11952,
+     "elapsed": 11952.0,
      "status": "ok",
-     "timestamp": 1446658914857,
+     "timestamp": 1.446658914857E12,
      "user": {
       "color": "",
       "displayName": "",
@@ -163,7 +163,7 @@
       "sessionId": "0",
       "userId": ""
      },
-     "user_tz": 480
+     "user_tz": 480.0
     },
     "id": "IRSyYiIIGIzS",
     "outputId": "650a208c-8359-4852-f4f5-8bf10e80ef6c"
@@ -207,7 +207,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -243,7 +243,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -324,11 +324,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 37
+       "item_id": 37.0
       }
      ]
     },
@@ -337,9 +337,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 63292,
+     "elapsed": 63292.0,
      "status": "ok",
-     "timestamp": 1446658966251,
+     "timestamp": 1.446658966251E12,
      "user": {
       "color": "",
       "displayName": "",
@@ -350,7 +350,7 @@
       "sessionId": "0",
       "userId": ""
      },
-     "user_tz": 480
+     "user_tz": 480.0
     },
     "id": "noKFb2UovVFR",
     "outputId": "28941338-2ef9-4088-8bd1-44295661e628"
@@ -1440,7 +1440,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
