--- a/courses/udacity/1_notmnist.ipynb
+++ b/courses/udacity/1_notmnist.ipynb
@@ -28,7 +28,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -79,11 +79,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 1
+       "item_id": 1.0
       }
      ]
     },
@@ -92,9 +92,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 186058,
+     "elapsed": 186058.0,
      "status": "ok",
-     "timestamp": 1444485672507,
+     "timestamp": 1.444485672507E12,
      "user": {
       "color": "#1FA15D",
       "displayName": "Vincent Vanhoucke",
@@ -105,7 +105,7 @@
       "sessionId": "2a0a5e044bb03b66",
       "userId": "102167687554210253930"
      },
-     "user_tz": 420
+     "user_tz": 420.0
     },
     "id": "EYRJ4ICW6-da",
     "outputId": "0d0f85df-155f-4a89-8e7e-ee32df36ec8d"
@@ -182,11 +182,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 1
+       "item_id": 1.0
       }
      ]
     },
@@ -195,9 +195,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 186055,
+     "elapsed": 186055.0,
      "status": "ok",
-     "timestamp": 1444485672525,
+     "timestamp": 1.444485672525E12,
      "user": {
       "color": "#1FA15D",
       "displayName": "Vincent Vanhoucke",
@@ -208,7 +208,7 @@
       "sessionId": "2a0a5e044bb03b66",
       "userId": "102167687554210253930"
      },
-     "user_tz": 420
+     "user_tz": 420.0
     },
     "id": "H8CBE-WZ8nmj",
     "outputId": "ef6c790c-2513-4b09-962e-27c79390c762"
@@ -412,11 +412,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 30
+       "item_id": 30.0
       }
      ]
     },
@@ -425,9 +425,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 399874,
+     "elapsed": 399874.0,
      "status": "ok",
-     "timestamp": 1444485886378,
+     "timestamp": 1.444485886378E12,
      "user": {
       "color": "#1FA15D",
       "displayName": "Vincent Vanhoucke",
@@ -438,7 +438,7 @@
       "sessionId": "2a0a5e044bb03b66",
       "userId": "102167687554210253930"
      },
-     "user_tz": 420
+     "user_tz": 420.0
     },
     "id": "h7q0XhG3MJdf",
     "outputId": "92c391bb-86ff-431d-9ada-315568a19e59"
@@ -979,11 +979,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 1
+       "item_id": 1.0
       }
      ]
     },
@@ -992,9 +992,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 411281,
+     "elapsed": 411281.0,
      "status": "ok",
-     "timestamp": 1444485897869,
+     "timestamp": 1.444485897869E12,
      "user": {
       "color": "#1FA15D",
       "displayName": "Vincent Vanhoucke",
@@ -1005,7 +1005,7 @@
       "sessionId": "2a0a5e044bb03b66",
       "userId": "102167687554210253930"
      },
-     "user_tz": 420
+     "user_tz": 420.0
     },
     "id": "s3mWgZLpyuzq",
     "outputId": "8af66da6-902d-4719-bedc-7c9fb7ae7948"
@@ -1097,7 +1097,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -1271,7 +1271,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -1309,11 +1309,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 1
+       "item_id": 1.0
       }
      ]
     },
@@ -1322,9 +1322,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 413065,
+     "elapsed": 413065.0,
      "status": "ok",
-     "timestamp": 1444485899688,
+     "timestamp": 1.444485899688E12,
      "user": {
       "color": "#1FA15D",
       "displayName": "Vincent Vanhoucke",
@@ -1335,7 +1335,7 @@
       "sessionId": "2a0a5e044bb03b66",
       "userId": "102167687554210253930"
      },
-     "user_tz": 420
+     "user_tz": 420.0
     },
     "id": "hQbLjrW_iT39",
     "outputId": "b440efc6-5ee1-4cbc-d02d-93db44ebd956"
@@ -1756,7 +1756,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -1775,7 +1777,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
