--- a/courses/udacity/2_fullyconnected.ipynb
+++ b/courses/udacity/2_fullyconnected.ipynb
@@ -28,7 +28,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -68,11 +68,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 1
+       "item_id": 1.0
       }
      ]
     },
@@ -81,9 +81,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 19456,
+     "elapsed": 19456.0,
      "status": "ok",
-     "timestamp": 1449847956073,
+     "timestamp": 1.449847956073E12,
      "user": {
       "color": "",
       "displayName": "",
@@ -94,7 +94,7 @@
       "sessionId": "0",
       "userId": ""
      },
-     "user_tz": 480
+     "user_tz": 480.0
     },
     "id": "y3-cj1bpmuxc",
     "outputId": "0ddb1607-1fc4-4ddb-de28-6c7ab7fb0c33"
@@ -149,11 +149,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 1
+       "item_id": 1.0
       }
      ]
     },
@@ -162,9 +162,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 19723,
+     "elapsed": 19723.0,
      "status": "ok",
-     "timestamp": 1449847956364,
+     "timestamp": 1.449847956364E12,
      "user": {
       "color": "",
       "displayName": "",
@@ -175,7 +175,7 @@
       "sessionId": "0",
       "userId": ""
      },
-     "user_tz": 480
+     "user_tz": 480.0
     },
     "id": "IRSyYiIIGIzS",
     "outputId": "2ba0fc75-1487-4ace-a562-cf81cae82793"
@@ -241,7 +241,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -332,11 +332,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 9
+       "item_id": 9.0
       }
      ]
     },
@@ -345,9 +345,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 57454,
+     "elapsed": 57454.0,
      "status": "ok",
-     "timestamp": 1449847994134,
+     "timestamp": 1.449847994134E12,
      "user": {
       "color": "",
       "displayName": "",
@@ -358,7 +358,7 @@
       "sessionId": "0",
       "userId": ""
      },
-     "user_tz": 480
+     "user_tz": 480.0
     },
     "id": "z2cjdenH869W",
     "outputId": "4c037ba1-b526-4d8e-e632-91e2a0333267"
@@ -429,7 +429,7 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      }
     },
     "colab_type": "code",
@@ -493,11 +493,11 @@
     "colab": {
      "autoexec": {
       "startup": false,
-      "wait_interval": 0
+      "wait_interval": 0.0
      },
      "output_extras": [
       {
-       "item_id": 6
+       "item_id": 6.0
       }
      ]
     },
@@ -506,9 +506,9 @@
     "deletable": true,
     "editable": true,
     "executionInfo": {
-     "elapsed": 66292,
+     "elapsed": 66292.0,
      "status": "ok",
-     "timestamp": 1449848003013,
+     "timestamp": 1.449848003013E12,
      "user": {
       "color": "",
       "displayName": "",
@@ -519,7 +519,7 @@
       "sessionId": "0",
       "userId": ""
      },
-     "user_tz": 480
+     "user_tz": 480.0
     },
     "id": "FoF91pknG_YW",
     "outputId": "d255c80e-954d-4183-ca1c-c7333ce91d0a"
@@ -750,7 +750,9 @@
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -769,7 +771,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
